fixed overflow

--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ body {
   width:100%;
   background-color: #e8e8e8;
   font-family: arial, sans-serif;
+    overflow-x: hidden;
 }
 
 .clear { 
